--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-
+Pratri ("प्रातृ") is a Sanskrit term that refers to the early morning or dawn. It is often used in the context of spiritual practices, rituals, and daily routines in Indian culture. The early morning hours are considered auspicious for meditation, prayer, and other spiritual activities, as it is believed that the mind is calm and receptive during this time. Many traditional Indian texts emphasize the importance of waking up early to connect with nature and engage in self-reflection.<!DOCTYPE html>
+<html lang="en">
